[gd_scene load_steps=6 format=3 uid="uid://do0aqfo3gkwd1"]

[ext_resource type="Script" path="res://scene/box.gd" id="1_n18jh"]
[ext_resource type="Texture2D" uid="uid://cjkjteqxjpy1v" path="res://Box3.png" id="1_pg16b"]
[ext_resource type="AudioStream" uid="uid://bs6s3abybmgys" path="res://sfx/pick-up-sfx-38516.mp3" id="3_e7lpf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o2xv4"]
size = Vector2(134.5, 93)

[sub_resource type="CircleShape2D" id="CircleShape2D_hqikc"]
radius = 135.148

[node name="Box" type="RigidBody2D"]
script = ExtResource("1_n18jh")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -9.53674e-07)
scale = Vector2(4.875, 5.625)
texture = ExtResource("1_pg16b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 47)
shape = SubResource("RectangleShape2D_o2xv4")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(131, 66)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 74)
shape = SubResource("CircleShape2D_hqikc")

[node name="PickUp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_e7lpf")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
